// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render component when shadow dom is disabled 1`] = `
<LayerHost
  dir="ltr"
  id="insights-dialog-layer-host"
>
  <DetailsDialog
    deps={
      Object {
        "getRTL": [Function],
      }
    }
    devToolActionMessageCreator="devToolActionMessageCreator"
    featureFlagStoreData={
      Object {
        "shadowDialog": false,
      }
    }
  />
</LayerHost>
`;

exports[`render component when shadow dom is enabled - isRTL - false 1`] = `
<DetailsDialog
  deps={
    Object {
      "getRTL": [Function],
    }
  }
  devToolActionMessageCreator="devToolActionMessageCreator"
  featureFlagStoreData={
    Object {
      "shadowDialog": true,
    }
  }
/>
`;

exports[`render component when shadow dom is enabled - isRTL - true 1`] = `
<DetailsDialog
  deps={
    Object {
      "getRTL": [Function],
    }
  }
  devToolActionMessageCreator="devToolActionMessageCreator"
  featureFlagStoreData={
    Object {
      "shadowDialog": true,
    }
  }
/>
`;
